esio: gnulib-tool --update
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@42940 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/gnulib/Makefile.am
+++ b/gnulib/Makefile.am
@@ -51,6 +51,15 @@ libgnu_la_LDFLAGS = $(AM_LDFLAGS)
 libgnu_la_LDFLAGS += -no-undefined
 libgnu_la_LDFLAGS += $(LTLIBINTL)
 
+## begin gnulib module absolute-header
+
+# Use this preprocessor expression to decide whether #include_next works.
+# Do not rely on a 'configure'-time test for this, since the expression
+# might appear in an installed header, which is used by some other compiler.
+HAVE_INCLUDE_NEXT = (__GNUC__ || 60000000 <= __DECC_VER)
+
+## end   gnulib module absolute-header
+
 ## begin gnulib module alloca
 
 
