esio: drop disthook verbosity
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@42944 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ EXTRA_DIST  += m4/gnulib-cache.m4
 
 dist-hook: docs
 	: # Include generated documentation in the dist tarball
-	cp -rv $(top_builddir)/docs $(top_distdir)
+	cp -r $(top_builddir)/docs $(top_distdir)
 	: # Eliminate .git and .svn directories in dist tarball
 	find $(distdir)/ -name '.svn' -type d -exec rm {} \;
 	find $(distdir)/ -name '.git' -type d -exec rm {} \;
