--- a/LICENSE.in
+++ b/LICENSE.in
@@ -4,7 +4,7 @@
 // @PACKAGE_STRING@: @PACKAGE_DESCRIPTION@
 // @PACKAGE_URL@
 //
-// Copyright (C) 2010, 2011, 2012, 2013 The PECOS Development Team
+// Copyright (C) 2010-2014 The PECOS Development Team
 //
 // This file is part of @PACKAGE_NAME@.
 //
