esio: #3015 update Autoconf Archive macros...
...save for ax_lib_hdf5.m4, which breaks the build!

Also, silence a couple of autoreconf warnings via configure.ac

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@43381 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -37,7 +37,10 @@ dnl ------------------------------------------------
 dnl Manipulate C settings and find MPI/HDF5
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG([info])
+AC_USE_SYSTEM_EXTENSIONS
 AC_PROG_CC
+AM_PROG_CC_C_O
+AM_PROG_AR
 gl_EARLY
 gl_INIT
 AX_APPEND_LINK_FLAGS([-Wl,--as-needed],[LDFLAGS])
