Add ./bootstrap to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 before_script:
   - sudo apt-get -qq update
-  - sudo apt-get -qq install gfortran libhdf5-mpi-dev
+  - sudo apt-get -qq install autotools-dev gfortran libhdf5-mpi-dev
 script: ./configure && make && make check && make distcheck
+  - ./bootstrap
   - ./configure
   - make all
   - make check
