--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 AX_PREFIX_CONFIG_H([esio/esio-config.h])
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(1.11 no-define tar-ustar color-tests -Wall foreign)
+AM_INIT_AUTOMAKE(1.11 no-define tar-ustar color-tests -Wall foreign subdir-objects)
 AC_PREREQ([2.64])
 AX_AM_MACROS
 AX_ADD_AM_CTAGSFLAGS
