Update for libtool 2.4.6

--- a/Makefile.am
+++ b/Makefile.am
@@ -105,7 +105,7 @@ endif
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
 	mv libtool libtool.bak
-	$(SED) libtool.bak -e 's/^wl=""$/wl="-Wl,"/' > libtool && rm libtool.bak
+	$(SED) libtool.bak -e 's/^link_all_deplibs=no$/link_all_deplibs=yes/' > libtool && rm libtool.bak
 
 # Push license updates into appropriate subdirectories
 .license.stamp:
